# SCI499

./: .gitignore  .nojekyll  01-Background.html  01-IntroBackground.html  02-Metapopulation Models.html  02-Metapopulation_Models.html  03-CurrentStudy.html  03-Hierarchical_models.html  04-Interventions.html  A-appA.html  CompartmentalModels.html  GmelbSA2Pop21.csv  ID  ID.pub  MM  Manifest.toml  Metapopulation_Models.html  Project.toml  README.md  SCI499_Moss.code-workspace  Simulation checklist.md  StochasticSIR.html  UNE_ST_presentation.html  UNE_ST_presentation.qmd  UNE_presentation.pptx  abstract.html  acknowledgements.html  declaration.html  example_batch.py  index.html  introduction.html  juliaScheduler.jl  refs.html  sa2simfiles.txt  search.json
.obsidian/: appearance.json  community-plugins.json  (+1 more)
data/Moss2018/urban-mobility-and-spatial-distribution-of-infection/: Cargo.toml  Makefile  README.md  analyse-output.R  map.R  plot-flu-distr.R  plot-risk-ratio-cmp.R  plot-sa3-deltas.R
data/Moss2018/urban-mobility-and-spatial-distribution-of-infection/data/influenza/: influenza-median-delta.ssv  influenza-notif-ratio.ssv
data/Moss2018/urban-mobility-and-spatial-distribution-of-infection/data/mixing/: sygic.csv
data/Moss2018/urban-mobility-and-spatial-distribution-of-infection/data/model-analysis/: .gitignore
data/Moss2018/urban-mobility-and-spatial-distribution-of-infection/sim/: default-ode.json  default-stoch.json  variable-frac-self.json
data/Moss2018/urban-mobility-and-spatial-distribution-of-infection/src/: lib.rs  main.rs  mixing.rs  run.rs  seir.rs
(+736 files in other folders)
